2006-01-16  Kjartan Maraas  <kmaraas@gnome.org>

	* plugin-manager.c: (eppm_enable_toggled): Remove unused var.

2006-01-13  Srinivasa Ragavan  <sragavan@novell.com>

	** Fixes bug #326265
	
	* org-gnome-plugin-manager.xml: Added mnemonics to Plugin menu item.

2005-12-30  Andre Klapper <a9016009@gmx.de>

	* evolution/plugins/plugin-manager/org-gnome-plugin-manager.eplug.xml:
 	 Fixing several typos and harmonizing
	 capital/small letters. Partially fixes bug 306117.

2005-12-12  Harish Krishnaswamy  <kharish@novell.com>

	* Makefile.am: Fix make-clean issues.

2005-08-03  Li Yuan  <li.yuan@sun.com>

	* plugin-manager.c: (org_gnome_plugin_manager_manage):
	Add a11y name to Plugin Table.

2005-07-21  Not Zed  <NotZed@Ximian.com>

	* org-gnome-plugin-manager.xml: Remove the tools menu which
	someone was too lazy to remove.

2005-06-27  Tor Lillqvist  <tml@novell.com>

	* Makefile.am: Use NO_UNDEFINED. Link with more libraries.

2005-06-18  Tor Lillqvist  <tml@novell.com>

	* org-gnome-plugin-manager.eplug.xml: Use SOEXT.

2005-05-13  Rodney Dawes  <dobey@novell.com>

	* org-gnome-plugin-manager.xml: Update for new menu layout

2005-05-13  Rodney Dawes  <dobey@novell.com>

	* Makefile.am: Add a backslash line separator to EXTRA_DIST

2005-05-11  Not Zed  <NotZed@Ximian.com>

	* Makefile.am: added built_sources/cleanfiles

2005-05-06  Not Zed  <NotZed@Ximian.com>

	* Makefile.am:
	* org-gnome-plugin-manager.eplug.xml: s/.in/.xml/ & i18n.

2004-11-09  Rodney Dawes  <dobey@novell.com>

	* Makefile.am: Add the xml file to EXTRA_DIST

2004-11-03  Not Zed  <NotZed@Ximian.com>

	* Makefile.am: extra_dist the .eplug.in file.

2004-10-20  Not Zed  <NotZed@Ximian.com>

	* implemented a plugin manager plugin.
