@@ -1,3 +1,9 @@
+2006-01-25  Rajeev ramanathan  <rajeevramanathan_2004@yahoo.co.in>
+
+	** Fixes Bug #314913
+	
+	* plugin-manager.c : Removed id, path displayed in UI 
+
 2006-01-16  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* plugin-manager.c: (eppm_enable_toggled): Remove unused var.
